# deep-research-agent

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  ORIENT.md  PLAN-archive.md  PLAN.md  README.md  langgraph.json  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md  start.md  wrapup.md
.claude/memory/: MEMORY.md
.claude/rules/: core.md
examples/: run_research.py  simple_query.py
guides/: delegation.md  verification.md
src/: agent.py  deep_agent.py  file_tools.py  prompts.py  research_tools.py  state.py  task_tool.py  think_tool.py  todo_tools.py
tests/: test_agent.py  test_files.py  test_hitl.py  test_research.py  test_smoke.py  test_task.py  test_todo.py
