[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Deep research agent built with LangGraph and Gemma 4, running locally on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-ollama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
